--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/navigation_home"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/title_home"/>
+            android:id="@+id/navigation_news"
+            android:icon="@drawable/ic_article_24px"
+            android:title="@string/title_news"/>
 
     <item
-            android:id="@+id/navigation_dashboard"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/title_dashboard"/>
+            android:id="@+id/navigation_trend"
+            android:icon="@drawable/ic_whatshot_24px"
+            android:title="@string/title_trend"/>
 
     <item
-            android:id="@+id/navigation_notifications"
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="@string/title_notifications"/>
+            android:id="@+id/navigation_data"
+            android:icon="@drawable/ic_timeline_24px"
+            android:title="@string/title_data"/>
+
+    <item
+            android:id="@+id/navigation_graph"
+            android:icon="@drawable/link"
+            android:title="@string/title_graph"/>
+
+    <item
+            android:id="@+id/navigation_settings"
+            android:icon="@drawable/ic_settings_24px"
+            android:title="@string/title_settings"/>
 
 </menu>
