--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,16 +10,12 @@
     <style name="QDTopBar" parent="CustomTitleBar.TopBar">
         <item name="titlebar_bg_color">@color/colorAccent</item>
         <item name="titlebar_title_text_size">16sp</item>
-        <item name="titlebar_title_color">@color/colorWhite</item>
-        <item name="titlebar_subtitle_color">@color/config_color_white</item>
-        <item name="titlebar_text_btn_color_state_list">@color/s_topbar_btn_color</item>
+        <item name="titlebar_title_color">@color/config_color_gray_1</item>
+        <item name="titlebar_subtitle_color">@color/config_color_gray_1</item>
+        <item name="titlebar_text_btn_color_state_list">@color/config_color_gray_1</item>
         <item name="titlebar_image_btn_height">48dp</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
