--- a/app/src/main/res/layout/data_row.xml
+++ b/app/src/main/res/layout/data_row.xml
@@ -3,7 +3,10 @@
               xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="horizontal">
+              android:orientation="vertical">
+    <View
+            android:layout_width="wrap_content"
+            android:layout_height="9dp"  android:layout_weight="1"/>
     <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:stretchColumns="*">
@@ -11,16 +14,16 @@
         <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:gravity="center">
                 <TextView
                         android:text="地区0"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" android:id="@+id/textRegion" android:textAlignment="center"
-                        android:gravity="center|center_vertical" android:textColor="#000000"/>
-            </LinearLayout>
+                        android:layout_height="match_parent"
+                        android:id="@+id/textRegion"
+                        android:textAlignment="center"
+                        android:gravity="center|center_vertical"
+                        android:textColor="#000000"
+                        android:maxWidth="0dp"/>
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -29,12 +32,15 @@
                         android:text="ActiveCases"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textActiveCases"
-                        android:textAlignment="center" android:textColor="#FF8522"/>
+                        android:textAlignment="center" android:textColor="#FF8522" android:maxWidth="32dp"/>
+                <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="2dp" android:layout_weight="1" android:maxWidth="32dp"/>
                 <TextView
                         android:text="NewActive"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textNewActive"
-                        android:textAlignment="center" android:textSize="12sp"/>
+                        android:textAlignment="center" android:textSize="12sp" android:maxWidth="32dp"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="vertical"
@@ -44,12 +50,15 @@
                         android:text="Overall"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textOverallCases"
-                        android:textAlignment="center" android:textColor="#BE0D00"/>
+                        android:textAlignment="center" android:textColor="#BE0D00" android:maxWidth="32dp"/>
+                <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="2dp" android:layout_weight="1" android:maxWidth="32dp"/>
                 <TextView
                         android:text="TextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textNewCases"
-                        android:textAlignment="center" android:textSize="12sp"/>
+                        android:textAlignment="center" android:textSize="12sp" android:maxWidth="32dp"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="vertical"
@@ -60,12 +69,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textDeaths"
                         android:textAlignment="center" android:textColor="#4D000000"
-                        android:textAllCaps="false"/>
+                        android:textAllCaps="false" android:maxWidth="32dp"/>
+                <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="2dp" android:layout_weight="1" android:maxWidth="32dp"/>
                 <TextView
                         android:text="TextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textNewDeaths"
-                        android:textAlignment="center" android:textSize="12sp"/>
+                        android:textAlignment="center" android:textSize="12sp" android:maxWidth="32dp"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="vertical"
@@ -75,14 +87,21 @@
                         android:text="Cured"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textCured"
-                        android:textAlignment="center" android:textColor="#00AD07"/>
+                        android:textAlignment="center" android:textColor="#00AD07" android:maxWidth="32dp"/>
+                <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="2dp" android:layout_weight="1" android:maxWidth="32dp"/>
                 <TextView
                         android:text="TextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textNewCured"
-                        android:textAlignment="center" android:textSize="12sp"/>
+                        android:textAlignment="center" android:textSize="12sp" android:maxWidth="32dp"/>
             </LinearLayout>
         </TableRow>
     </TableLayout>
+    <View
+            android:layout_width="wrap_content"
+            android:layout_height="5dp" android:layout_weight="1"/>
+
 </LinearLayout>
 
