search; cache control & settings

--- a/app/src/main/res/layout/activity_cache.xml
+++ b/app/src/main/res/layout/activity_cache.xml
@@ -12,7 +12,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:elevation="4dp"
-            app:title="@string/search_title"
+            app:title="@string/view_cache"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" tools:ignore="MissingConstraints"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
