--- a/app/src/main/res/layout/activity_entity.xml
+++ b/app/src/main/res/layout/activity_entity.xml
@@ -23,24 +23,26 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/my_toolbar"
             app:layout_constraintBottom_toBottomOf="parent">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                       android:orientation="vertical">
             <TextView
                     android:text="Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/Title"
                     android:textSize="24sp" android:textColor="@color/config_color_black"
-                    android:layout_marginStart="13dp"
-                    android:layout_marginTop="27dp"/>
+                    android:paddingStart="17dp" android:paddingEnd="17dp" android:paddingTop="17dp"/>
             <TextView
                     android:text="author time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/affix"
-                    android:layout_marginStart="17dp"/>
+                    android:paddingStart="17dp" android:paddingEnd="17dp"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
             <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageView"/>
+                    android:id="@+id/imageView" android:paddingStart="17dp" android:paddingEnd="17dp"/>
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -50,17 +52,28 @@
                     android:textIsSelectable="true"
                     android:focusable="true"
                     android:longClickable="true"
-                    android:id="@+id/Content" android:layout_marginStart="17dp" android:layout_marginEnd="17dp"
+                    android:id="@+id/Content"
                     style="@style/TextAppearance.MaterialComponents.Body1" android:background="#00000000"
-                    android:text="Lorem ipsum dora sit amet" android:layout_marginTop="30dp"
-                    android:duplicateParentState="false"/>
+                    android:text="Lorem ipsum dora sit amet"
+                    android:duplicateParentState="false"
+                    android:paddingStart="17dp" android:paddingEnd="17dp"/>
             <Space
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"/>
-            <ExpandableListView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                    android:layout_height="20dp"/>
+            <ExpandableListView android:layout_width="match_parent" android:layout_height="500dp"
                                 android:id="@+id/expandable_list">
 
             </ExpandableListView>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <ProgressBar
+                        android:id="@+id/pb_loading2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:indeterminateDrawable="@drawable/progressbar_refresh" android:layout_weight="1"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
