--- a/app/src/main/res/layout/item_without_icon.xml
+++ b/app/src/main/res/layout/item_without_icon.xml
@@ -31,7 +31,7 @@
                                         android:orientation="vertical">
                                         <TextView
                                                 android:id="@+id/name"
-                                                android:layout_width="wrap_content"
+                                                android:layout_width="320dp"
                                                 android:layout_height="wrap_content"
                                                 android:paddingStart="8dp"
                                                 android:textColor="#1D1D1C"
@@ -41,7 +41,7 @@
                                                 android:layout_height="5dp"/>
                                         <TextView
                                                 android:id="@+id/author"
-                                                android:layout_width="wrap_content"
+                                                android:layout_width="340dp"
                                                 android:layout_height="wrap_content"
                                                 android:paddingStart="8dp"
                                                 android:textColor="#B4B4B9"
