--- a/app/src/main/res/layout/trend_item.xml
+++ b/app/src/main/res/layout/trend_item.xml
@@ -9,7 +9,9 @@
             android:id="@+id/txtItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="14dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
             android:textColor="#000000"
             android:textSize="16sp"
             android:gravity="center"/>
